# rust-todo

./: .gitignore  Cargo.toml  docker-compose.yml
db/: Cargo.toml
todo/: Cargo.toml  Dockerfile  todo.db
todo/src/: main.rs
todo/templates/: index.html
web/: Cargo.toml
web/src/: main.rs
