[package]
name = "todo-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.3"
actix-web = "3.3"
askama = "0.10"
thiserror = "1.0"
rusqlite = { version = "0.26.0", features = ["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
